[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/pickups/basic_bullet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 2 )

[node name="Bullet" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Bullet" type="Area2D" parent="."]
collision_layer = 18
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet"]
shape = SubResource( 1 )

[node name="KillSwitch" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="area_entered" from="Bullet" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Bullet" to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="KillSwitch" to="." method="_on_KillSwitch_timeout"]
